--- a/SelfHosted-Agent/Linux-self-Hosted-Agent/Spring-pet-clinic/azure-pipelines.yaml
+++ b/SelfHosted-Agent/Linux-self-Hosted-Agent/Spring-pet-clinic/azure-pipelines.yaml
@@ -3,7 +3,7 @@ steps:
   - task: Maven@4
     inputs: 
       mavenPOMFile: pom.xml
-      goals: clean package
+      goals: validate
       jdkVersionOption: '1.17'
       javaHomeOption: 'JDKVersion'
 pool: hi
